설문조사 생성 시 선택 리스트 inputValue 자동으로 생성하도록 변경
- 0부터 정상적으로 생성하는지 테스트 추가